--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <receiver android:name=".InternationalFixedCalendarDate">
+        <receiver
+            android:name=".InternationalFixedCalendarDate"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
@@ -18,7 +20,9 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/international_fixed_calendar_date_info" />
         </receiver>
-        <receiver android:name=".DecimalTime">
+        <receiver
+            android:name=".DecimalTime"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
@@ -30,10 +34,10 @@
 
         <activity
             android:name=".MainActivity"
-            android:configChanges="uiMode">
+            android:configChanges="uiMode"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
